# rust-opentelemetry

./: .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/prometheus/: prometheus.yml
src/: main.rs
