[package]
name = "test_pipeline"
version = "0.2.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bigdecimal = { version = "0.3", features = ["serde"] }
built = { version = "0.5", features = ["git2"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["string"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"


[build-dependencies]
built = "0.5"
